[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Lightweight, event-driven WebSockets for Rust."
documentation = "https://ws-rs.org/docs"
keywords = ["websocket", "mio", "event-driven", "io", "web"]
license = "MIT"
name = "ws"
readme = "README.md"
repository = "https://github.com/housleyjk/ws-rs"
version = "0.6.0"

[dependencies]
bytes = "0.3.0"
httparse = "1.2.1"
log = "0.3.6"
mio = "0.6.4"
rand = "0.3.15"
sha1 = "0.2.0"
slab = "0.3.0"
url = "1.4.0"

[dependencies.libc]
optional = true
version = "0.2.20"

[dependencies.libz-sys]
optional = true
version = "1.0.13"

[dependencies.openssl]
optional = true
version = "0.7.14"

[dev-dependencies]
clap = "2.20.4"
env_logger = "0.4.0"
term = "0.4.5"
time = "0.1.36"

[features]
default = []
permessage-deflate = ["libz-sys", "libc"]
ssl = ["openssl"]
