[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Lightweight, event-driven WebSockets for Rust."
documentation = "https://ws-rs.org/docs"
keywords = ["websocket", "mio", "event-driven", "io", "web"]
license = "MIT"
name = "ws"
readme = "README.md"
repository = "https://github.com/housleyjk/ws-rs"
version = "0.7.6"

[dependencies]
byteorder = "1.1"
bytes = "0.4"
httparse = "1.2"
log = "0.4"
mio = "0.6"
rand = "0.4"
sha1 = "0.6"
slab = "0.3"
url = "1.5"

[dependencies.libc]
optional = true
version = "0.2"

[dependencies.libz-sys]
optional = true
version = "1.0"

[dependencies.openssl]
optional = true
version = "0.9"

[dev-dependencies]
clap = "2.27"
env_logger = "0.5"
term = "0.4"
time = "0.1"

[features]
default = []
permessage-deflate = [
    "libz-sys",
    "libc",
]
ssl = ["openssl"]
