[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Lightweight, event-driven WebSockets for Rust."
documentation = "https://ws-rs.org/docs"
keywords = [
    "websocket",
    "mio",
    "event-driven",
    "io",
    "web",
]
license = "MIT"
name = "ws"
readme = "README.md"
repository = "https://github.com/housleyjk/ws-rs"
version = "0.7.6"

[dependencies]
byteorder = "1.2.1"
bytes = "0.4.6"
httparse = "1.2.4"
log = "0.4.1"
mio = "0.6.14"
mio-extras = "2.0"
rand = "0.4.2"
sha1 = "0.6.0"
slab = "0.3"
url = "1.7.0"

[dependencies.libc]
optional = true
version = "0.2.40"

[dependencies.libz-sys]
optional = true
version = "1.0.18"

[dependencies.openssl]
optional = true
version = "0.9"

[dev-dependencies]
clap = "2.31.2"
env_logger = "0.5.6"
term = "0.5.1"
time = "0.1.39"

[features]
default = []
permessage-deflate = [
    "libz-sys",
    "libc",
]
ssl = ["openssl"]
